--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stockapi",
+  "name": "rwanda-info-view-api",
   "version": "1.0.0",
-  "description": "Stock management app",
+  "description": "Rwanda Info View API",
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
