--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rwanda Info View API",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register 'test/**/*.test.ts' --timeout 10000",
     "dev": "nodemon",
     "build": "tsc",
     "migrate": "sequelize-cli db:migrate",
@@ -50,23 +50,31 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@types/chai": "^5.2.2",
+    "@types/chai-http": "^4.2.4",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/lodash": "^4.17.19",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.30",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
+    "chai": "^5.2.0",
+    "chai-http": "^5.1.2",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "mocha": "^11.7.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
