--- a/tsconfig.json
+++ b/tsconfig.json
@@ -121,6 +121,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*"
   ]
 }
