--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "mocha -r ts-node/register 'test/**/*.test.ts' --timeout 10000",
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
     "seed": "sequelize-cli db:seed:all",
     "seed:undo": "sequelize-cli db:seed:undo:all",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "postbuild": "cp src/configs/env-config.js dist/configs/env-config.js"
   },
   "repository": {
     "type": "git",
@@ -76,6 +77,7 @@
     "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
