--- a/tsconfig.json
+++ b/tsconfig.json
@@ -121,7 +121,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*",
-    "test/**/*"
+    "src/**/*"
   ]
 }
