--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -48,6 +49,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.0",
+    "redis": "^5.6.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
