--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,10 @@
         "src/libs/*"
       ],
       "@db/*": [
-        "src/services/db/*"
+        "src/services/db/*",
+      ],
+      "@cache/*": [
+        "src/services/cache/*"
       ],
     }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
