--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,21 +28,22 @@
     "module": "CommonJS", /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
+    "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@models/*": [
-        "./src/models/*"
+        "src/models/*"
       ],
       "@configs/*": [
-        "./src/configs/*"
+        "src/configs/*"
       ],
       "@libs/*": [
-        "./src/libs/*"
+        "src/libs/*"
       ],
       "@db/*": [
-        "./src/services/db/*",
+        "src/services/db/*",
       ],
       "@cache/*": [
-        "./src/services/cache/*"
+        "src/services/cache/*"
       ],
     }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
