--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rwanda Info View API",
   "main": "app.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register 'test/**/*.test.ts' --timeout 10000",
+    "test": "mocha",
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "migrate": "sequelize-cli db:migrate",
@@ -53,7 +53,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "@types/chai": "^5.2.2",
+    "@types/chai": "^5.2.3",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -67,19 +67,20 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
-    "chai": "^5.2.0",
-    "chai-http": "^5.1.2",
+    "chai": "^6.2.2",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
-    "mocha": "^11.7.1",
+    "mocha": "^11.7.5",
     "nodemon": "^3.1.10",
+    "nyc": "^17.1.0",
     "prettier": "^3.5.3",
     "sequelize-cli": "^6.6.3",
-    "supertest": "^7.1.1",
+    "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3"
   }
 }
