--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     /* Modules */
-    "module": "CommonJS", /* Specify what module code is generated. */
+    "module": "es2020", /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "bundler", /* Specify how TypeScript looks up a file from a given module specifier. */
     "paths": {
